# task2.2

./: README.txt
app/: CMakeLists.txt
app/src/: main.c
app/tests/: CMakeLists.txt
app/tests/test_integration/: test_app.c
lib/: CMakeLists.txt
lib/include/: config.h  lib_main.h
lib/src/: lib_main.c
lib/tests/: CMakeLists.txt
lib/tests/test_feature_a/: test_lib.c
test_dir/: 2.txt
